--- a/css/board.css
+++ b/css/board.css
@@ -88,6 +88,7 @@
 .bubble.left .bubble_edge,.rd_nav_side .bubble_edge{top:50%;right:-6px;bottom:auto;left:auto;width:6px;height:9px;margin-top:-5px;background-position:0 -96px}
 /* Menu */
 .bd .img_tx a{font-size:11px;line-height:16px;letter-spacing:-1px;text-decoration:none;*cursor:pointer}
+.bd .img_tx a:hover .fa {color: #efefef}
 /* Text Image */
 .bd .tx_ico_chk{display:inline-block;padding:0 3px;font:700 12px/10px Arial;color:#77A;box-shadow:0 4px 5px -4px #669}
 .bd .tx_ico_circ{display:inline-block;width:1.2em;height:1.2em;border-radius:2em;line-height:1.2em;text-align:center;text-decoration:none !important;color:#FFF;opacity:.75}
@@ -249,7 +250,7 @@
 .btm_mn{position:relative;margin-top:-1px;padding:10px 10px 0;border-top:1px solid #CCC}
 .btm_mn .fl .btn_img{margin-right:4px}
 .bd_srch_btm{display:inline}
-.bd .bd_srch_btm_itx{position:absolute;top:-1px;left:-1px;width:100%;height:100%;border:0;box-shadow:none;background:none;cursor:pointer}
+.bd .bd_srch_btm_itx{position:absolute;top:-1px;left:-1px;width:100%;height:100%;border:0;box-shadow:none;background:none;cursor:pointer; outline: none;}
 .bd .bd_srch_btm label{display:inline;position:static;font-size:11px;line-height:16px}
 .bd_srch_btm button{background-color:transparent;border:0}
 .bd_srch_btm.on .itx_wrp{float:left;width:140px;overflow:visible\9 !important}
@@ -408,6 +409,7 @@
 /* Vote */
 .rd_vote{padding-bottom:30px;text-align:center}
 .bd .rd_vote a{display:inline-block;width:46px;height:46px;margin:0 8px;text-decoration:none;border-radius:4px;*display:inline;*zoom:1}
+.bd .rd_vote a:first-child:hover {background-color: #3e6bc7;color:#efefef !important; border-color:#1b48ab}
 .rd_vote a.blamed{border:2px solid #BBB;color:#AAA}
 .bd .rd_vote a:hover,.bd .rd_vote a:focus{box-shadow:0 1px 4px rgba(0,0,0,.2)}
 .rd_vote b{display:block;padding-top:7px;font:700 17px/1 Arial,sans-serif}
@@ -604,6 +606,8 @@
 .bd_lst{clear:both;margin:0;padding:0;list-style:none;*zoom:1}
 .bd_tb_lst tr,.bd_zine li{border-bottom:1px solid #EEE}
 .bd_tb_lst tr.notice,.bd_zine li.notice,.bd_tb_lst .select,.bd_tb_lst tbody tr:hover{background:#F9F9F9;border-color:#DDD}
+.bd_tb_lst tr.notice {transition: ease .2s;}
+.bd_tb_lst tr.notice:hover {background:var(--color-gray-400);}
 .bd_tb_lst.common_notice{margin-top:0;padding:0 2px}
 .bd_lst input[type=checkbox]{position:relative;z-index:10}
 .bd_lst img,.bd_lst input{vertical-align:middle}
@@ -667,6 +671,7 @@
 .bd_tb_lst .cate{padding:8px;color:#666}
 .bd_tb_lst .title{padding-right:6px;width:100%}
 .bd_tb_lst td.title{text-align:left;font-size:14px;white-space:normal;word-break:break-all}
+.bd_tb_lst td.title>a:hover {text-decoration: none}
 .bd_lst td.title a{color:#222}
 .bd_tb_lst .wrp{left:0;margin-left:0 !important;white-space:normal}
 .bd_tb_lst .bubble_edge{left:20%}
@@ -677,6 +682,41 @@
 .bd_tb_lst .author img{max-width:none}
 .bd_tb_lst .last_post{line-height:12px}
 .bd_tb_lst .extraimages{margin-left:2px;white-space:nowrap}
+
+/* 벡터 아이콘 */
+/* 파일 */
+.extraimages img[alt="file"] {
+	object-position: -99999px 99999px;
+	background: url("data:image/svg+xml;utf8, <svg xmlns='http://www.w3.org/2000/svg' id='Layer_1' data-name='Layer 1' viewBox='0 0 44 44'><defs><style>.cls-1 {fill: none;}.cls-1,.cls-2 {stroke: white; stroke-linecap: round;stroke-linejoin: round; stroke-width: 3}.cls-2 {fill: none; stroke-width:3}</style></defs><polygon class='cls-2' points='33.45 1 1 1 1 43 43 43 43 10.55 33.45 1'></polygon><g><polygon class='cls-1' points='33.45 1 31.07 1 31.07 15.32 8.16 15.32 8.16 1 1 1 1 43 8.16 43 8.16 25.82 35.84 25.82 35.84 43 43 43 43 10.55 33.45 1'></polygon><rect class='cls-1' x='26.3' y='3.98' width='2.86' height='8.35'></rect></g></svg>");
+	background-repeat: no-repeat;
+	filter: invert(41%) sepia(42%) saturate(897%) hue-rotate(182deg) brightness(111%) contrast(93%);
+}
+/* 이미지 */
+.bd .attached_image {
+	background: url("data:image/svg+xml;utf8, <svg xmlns='http://www.w3.org/2000/svg' id='Layer_1' data-name='Layer 1' viewBox='0 0 44 44'><defs><style>.cls-1{stroke-miterlimit: 10;}.cls-1, .cls-2 {fill: white;}.cls-1, .cls-2, .cls-3 {stroke: white; stroke-width: 3}.cls-2, .cls-3 {stroke-linecap: round;stroke-linejoin: round;}.cls-3 {fill: none;}</style></defs><rect class='cls-3' x='0' y='8' width='44' height='29'></rect><circle class='cls-1' cx='7' cy='14' r='3'></circle><path class='cls-2' d='M33.25,22.97l-5.8-7.97-10,14.78-6.36-7.83-9.09,13.04h40s-4.69-6.45-8.75-12.03Z'></path></svg>");
+	background-repeat: no-repeat;
+	filter: invert(56%) sepia(43%) saturate(483%) hue-rotate(91deg) brightness(117%) contrast(89%);
+}
+/* 비밀글 */
+.extraimages img[alt="secret"] {
+	object-position: -99999px 99999px;
+	background: url("data:image/svg+xml;utf8, <svg xmlns='http://www.w3.org/2000/svg' id='Layer_1' data-name='Layer 1' viewBox='0 0 44 44'><defs><style>.cls-1 {fill: white; stroke: white; stroke-linecap: round; stroke-linejoin: round; stroke-width: 3}</style></defs><path class='cls-1' d='M35.14,21.76v-6.28c0-9.07-5.88-14.48-13.14-14.48s-13.14,5.42-13.14,14.48v6.28h-3.86v21.24h34v-21.24h-3.86ZM11.49,21.76v-6.28c0-7.25,4.71-11.2,10.51-11.2s10.51,3.95,10.51,11.2v6.28H11.49Z'></path></svg>");
+	background-repeat: no-repeat;
+}
+/* 새글 */
+.extraimages img[alt="new"] {
+	object-position: -99999px 99999px;
+	background: url("data:image/svg+xml;utf8, <svg xmlns='http://www.w3.org/2000/svg' id='Layer_1' data-name='Layer 1' viewBox='0 0 44 44'><defs><style>.cls-1 {fill: none; stroke: white; stroke-linecap: round; stroke-linejoin: round; stroke-width: 5;}.cls-1, .cls-2 {stroke-linecap: round;stroke-linejoin: round;}.cls-2 {fill: orangered; stroke: orangered;}</style></defs><rect class='cls-2' x='2' y='2' width='40' height='40' rx='3' ry='3'/><polyline class='cls-1' points='12 35.33 12 8.67 32 35.33 32 8.67'/></svg>");
+	background-repeat: no-repeat;
+}
+/* 업데이트 */
+.extraimages img[alt="update"] {
+	object-position: -99999px 99999px;
+	background: url("data:image/svg+xml;utf8, <svg xmlns='http://www.w3.org/2000/svg' id='Layer_1' data-name='Layer 1' viewBox='0 0 44 44'><defs><style>.cls-1 {fill: none; stroke: white; stroke-linecap: round; stroke-linejoin: round; stroke-width: 5;}.cls-1, .cls-2 {stroke-linecap: round;stroke-linejoin: round;}.cls-2 {fill: mediumslateblue; stroke: mediumslateblue;}</style></defs><rect xmlns='http://www.w3.org/2000/svg' class='cls-2' x='2' y='2' width='40' height='40' rx='3' ry='3'/><path class='cls-1' d='M12,26.25V8.75v17.5c0,5.52,4.48,10,10,10s10-4.48,10-10V8.75v17.5'/></svg>");
+	background-repeat: no-repeat;
+	color: 
+}
+
 .bd_tb_lst .link_url{text-align:left}
 
 /* Webzine */
@@ -1022,6 +1062,8 @@ body.viewer_blk{background:#222}
 .bd_wrt .regist .cancle{position:static}
 .context_data,.context_message{margin:0}
 .et_vars th{min-width:0;padding:6px 18px 6px 12px}
+/* 공지칸 반응형 수정 */
+.notice td:nth-child(1), .notice td:nth-child(2){display:none}
 .bd_tb_lst th{font-size:13px}
 .bd_tb_lst td{position:relative;padding:12px 4px;font-size:10px}
 .bd_tb_lst td.title{padding:8px}
@@ -1070,7 +1112,7 @@ body.viewer{padding:0}
 /* Double Webzine */
 .webzine tr.bg1 td,
 .webzine tr.bg2 td{padding:10px 6px 6px 6px; *padding:10px 6px 6px 6px;}
-.webzine tr td .box {border:1px solid #ddd}  /* 웹진이 가로 2개 이상시 테두리값 설정 */
+.webzine tr td .box {border:1px solid #ddd} /* 웹진이 가로 2개 이상시 테두리값 설정 */
 .webzine td.title p.title{ margin-bottom:9px; }
 .webzine td.title p.title .category{ font-size:12px;}
 .webzine td.title p.title a { color:#000000; }
@@ -1167,7 +1209,7 @@ body.viewer{padding:0}
 
  -webkit-animation-timing-function:ease-in-out; //키프레임간의 타이밍 정도 ease / ease-in / ease-in-out
 
- -webkit-animation-direction:alternate  //플레이 상태값, normal 순방향 / alternate 역방향
+ -webkit-animation-direction:alternate //플레이 상태값, normal 순방향 / alternate 역방향
  */
 .blink1 { -webkit-animation-name: blinker; -webkit-animation-iteration-count: infinite; 
 -webkit-animation-timing-function: cubic-bezier(1.0,0,0,1.0); -webkit-animation-duration: 2s; -webkit-animation-timing-function:ease-in-out; -webkit-animation-direction: alternate; }
@@ -1215,7 +1257,7 @@ a.downimg:focus { background:url(../img/down02.png) no-repeat 0 0px; }
 .bd_ft .EndButton { float:right; text-align:right; margin-top:-5px; }
 .bd_ft .Area { display:table; width:100%; box-sizing:border-box; padding:10px; }
 .bd_ft .title { vertical-align:middle; }
-.bd_ft .number { float:left; display:flex; justify-content:center; align-items:center; width:15px; height:15px; font-size: 0.9em; color:#fff; background-color:#444; padding:3px; border-radius:50%;  margin:4px 5px 0 0; }
+.bd_ft .number { float:left; display:flex; justify-content:center; align-items:center; width:15px; height:15px; font-size: 0.9em; color:#fff; background-color:#444; padding:3px; border-radius:50%; margin:4px 5px 0 0; }
 .bd_ft .title a { font-size:20px; }
 .bd_ft .tag { margin-top:5px; }
 .bd_ft .tag a { margin:0 5px; font-size:12px; color:#444; }
@@ -1268,5 +1310,3 @@ a.downimg:focus { background:url(../img/down02.png) no-repeat 0 0px; }
 
 /* MP4 동영상에 프로그레스바 기능 추가 */
 .trackBar { background-color:#c00000c2; height:10px; width:0; position:relative; margin:-6px 2px 0px 0px; }
-
-.fa.liked { color: #f5cfcf; }
